--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                             <p>¡Agrega nuestra skill de Alexa !</p>
                     </div>
                     <div class="card">
-                        <a href="index.html"><img src="qrcode_charlyrd.github.io.png" alt=""></a>
+                        <a href="qr-code%20chilakin.pdf"><img src="qr-codigo-%20chilaking.png" alt=""></a>
                         <h4>¡Facil de compartir !</h4>
                             <p>Escanea nuestro QR</p>
                     </div>
