--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
   <img src="menu_s_roja_2%20icono.ico" style="float: left">
   <p>Chilaquiles con salsa roja:</p>
 
-  <p>Tortilla cortada y dorada bañada salsa verde con queso espolvoreado y pollo desmenusado, decorados con cebolla morada y crema esparcida y acompañados de unos frijoplitos negros</p>
+  <p>Tortilla cortada y dorada bañada salsa roja con queso espolvoreado y pollo desmenusado, decorados con cebolla morada y crema esparcida y acompañados de unos frijoplitos negros</p>
                                    <a class="btn btn-primary" href="Tiketrojo.html">Comprar</a> 
 
                  
